--- a/events.html
+++ b/events.html
@@ -4,17 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Sail" rel="stylesheet">
     <title>Events</title>
   </head>
   <body>
-    <img src="Logo5D.png" alt="Logo">
-<h1>Events side</h1>
+    <div class="RAheader">
+      <header>
+        <img src="logofon.png" alt="Logo">
+      </header>
+  <h1>Hereford møbler</h1>
+    </div>
 <div class="RAnavbar">
-  <a href="forside">Forside</a>
-  <a href="produkter">Produkter</a>
-  <a href="events">Events</a>
-  <a href="inspiration">Inspiration</a>
-  <a href="kontakt">Kontakt</a>
+  <ul>
+    <li><a href="produkter">Produkter</a></li>
+    <li><a href="events">Events</a></li>
+    <li><a href="inspiration">Inspiration</a></li>
+    <li><a href="kontakt">Kontakt</a></li>
+  </ul>
 </div>
   </body>
 </html>
