--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Sail" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
     <title>Events</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
 <div class="RAnavbar">
   <ul>
     <li><a href="produkter">Produkter</a></li>
-    <li><a href="events">Events</a></li>
+    <li><a class="active" href="events">Events</a></li>
     <li><a href="inspiration">Inspiration</a></li>
     <li><a href="kontakt">Kontakt</a></li>
   </ul>
