--- a/events.html
+++ b/events.html
@@ -23,5 +23,13 @@
     <li><a href="kontakt">Kontakt</a></li>
   </ul>
 </div>
+<div class="RAtekst">
+
+</div>
+<div class="RAfooter">
+  <footer>
+    <p>Hereford</p>
+  </footer>
+</div>
   </body>
 </html>
