--- a/events.html
+++ b/events.html
@@ -24,7 +24,19 @@
   </ul>
 </div>
 <div class="RAtekst">
-
+  <img src="anneglad.png" alt="AnneGlad">
+<h3>Anne Glad på besøg på Kragerup gods</h3>
+<p>Anne Glad kommer på besøg på Kragerup gods, og vil give et foredrag omkring det at være livsstilsekspert.</p>
+</div>
+<div class="RAtekst" id="lauritz">
+  <img src="lauritz.png" alt="Lauritz">
+  <h3>Nyt auktionshus på vej</h3>
+  <p>Der et nyt auktionshus på vej til Hillerød og det medbringer en hel masse nye vare.</p>
+</div>
+<div class="RAtekst" id="møbler">
+  <img src="møbler.png" alt="Møbler">
+  <h3>Nyt sortiment af møbler på vej</h3>
+  <p>Vi har fået opkøbt en ny sending møbler, og de fleste af dem er fra de tidlige 1800.</p>
 </div>
 <div class="RAfooter">
   <footer>
