--- a/events.html
+++ b/events.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Sail" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yantramanav" rel="stylesheet">
     <title>Events</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
     <li><a href="kontakt">Kontakt</a></li>
   </ul>
 </div>
-<div class="RAtekst">
+<div class="RAtekst" id="anne">
   <img src="anneglad.png" alt="AnneGlad">
 <h3>Anne Glad på besøg på Kragerup gods</h3>
 <p>Anne Glad kommer på besøg på Kragerup gods, og vil give et foredrag omkring det at være livsstilsekspert.</p>
@@ -40,7 +41,10 @@
 </div>
 <div class="RAfooter">
   <footer>
-    <p>Hereford</p>
+    <img src="facebook.png" alt="Facebook logo">
+    <img src="snapchat.png" alt="Instagram logo">
+    <p>hereford@gmail.com</p>
+    <p>53124678</p>
   </footer>
 </div>
   </body>
