--- a/events.html
+++ b/events.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Her er al meta dataen-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -10,42 +11,48 @@
     <title>Events</title>
   </head>
   <body>
-    <div class="RAheader">
+    <!-- Her er headeren-->
       <header>
-        <img src="logofon.png" alt="Logo">
+        <img src="logodesk.png" alt="Logo">
+        <img id="logodesk"src="logodesk.png" alt="Logo">
+        <!-- Her er overskriften-->
+        <h1>Hereford møbler</h1>
       </header>
-  <h1>Hereford møbler</h1>
-    </div>
-<div class="RAnavbar">
+    <!-- Her er navigations baren-->
   <ul>
     <li><a href="produkter">Produkter</a></li>
     <li><a class="active" href="events">Events</a></li>
     <li><a href="inspiration">Inspiration</a></li>
     <li><a href="kontakt">Kontakt</a></li>
   </ul>
-</div>
-<div class="RAtekst" id="anne">
+<!-- Her er de tre tekster-->
+<div class="RAtekst">
   <img src="anneglad.png" alt="AnneGlad">
-<h3>Anne Glad på besøg på Kragerup gods</h3>
+<h3>Anne Glad på besøg på Kragerup gods.</h3>
+  <br>
+  <br>
 <p>Anne Glad kommer på besøg på Kragerup gods, og vil give et foredrag omkring det at være livsstilsekspert.</p>
 </div>
-<div class="RAtekst" id="lauritz">
+<div class="RAtekst">
   <img src="lauritz.png" alt="Lauritz">
-  <h3>Nyt auktionshus på vej</h3>
+  <h3>Nyt auktionshus på vej.</h3>
+  <br>
+  <br>
   <p>Der et nyt auktionshus på vej til Hillerød og det medbringer en hel masse nye vare.</p>
 </div>
-<div class="RAtekst" id="møbler">
+<div class="RAtekst">
   <img src="møbler.png" alt="Møbler">
-  <h3>Nyt sortiment af møbler på vej</h3>
+  <h3>Nyt sortiment af møbler på vej.</h3>
+  <br>
+  <br>
   <p>Vi har fået opkøbt en ny sending møbler, og de fleste af dem er fra de tidlige 1800.</p>
 </div>
-<div class="RAfooter">
+<!-- Her er footeren-->
   <footer>
     <img src="facebook.png" alt="Facebook logo">
     <img src="snapchat.png" alt="Instagram logo">
     <p>hereford@gmail.com</p>
     <p>53124678</p>
   </footer>
-</div>
   </body>
 </html>
