--- a/events.html
+++ b/events.html
@@ -41,7 +41,7 @@
   <p>Der et nyt auktionshus på vej til Hillerød og det medbringer en hel masse nye vare.</p>
 </div>
 <div class="RAtekst">
-  <img src="møbler.png" alt="Møbler">
+  <img src="moebler.png" alt="Møbler">
   <h3>Nyt sortiment af møbler på vej.</h3>
   <br>
   <br>
